add favicon, copy

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; 2022 Minatronic, Inc..</li><li><a href="http://html5up.net">winestoragepaso@gmail.com</a></li>
+							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="http://html5up.net">winestoragepaso@gmail.com</a></li>
 						</ul>
 					</footer>
 				</div>
