--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="https://formspree.io/minatronic.llc@gmail.com">
+							<form method="post" action="https://formspree.io/f/mvolzvzd">
 								<div class="row">
 									<!-- <div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Name" />
