--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <html>
 	<head>
 		<title>Paso Wine Storage</title>
+		<meta name="description" content="Offering a climate controlled environment for all your wine storage needs.">
+		<meta name="keywords" content="paso, robles, wine, storage, vineyard, bottle, case, barrel, warehouse, climate, controlled"> 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -194,7 +196,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="http://html5up.net">winestoragepaso@gmail.com</a></li>
+							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:winestoragepaso@gmail.com?cc=m.kudija@gmail.com&subject=Paso%20Wine%20Storage">Link text</a></li>
 						</ul>
 					</footer>
 				</div>
