--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="keywords" content="paso, robles, wine, storage, vineyard, bottle, case, barrel, warehouse, climate, controlled"> 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="next" href="https://pasowinestorage.com/#contact">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
