--- a/index.html
+++ b/index.html
@@ -5,46 +5,62 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Paso Wine Storage</title>
-		<meta name="description" content="Offering a climate controlled environment for all your wine storage needs.">
-		<meta name="keywords" content="paso, robles, wine, storage, vineyard, bottle, case, barrel, warehouse, climate, controlled"> 
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="next" href="https://pasowinestorage.com/#contact">
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<head>
+	<title>Paso Wine Storage</title>
+	<meta name="description" content="Offering a climate controlled environment for all your wine storage needs.">
+	<meta name="keywords" content="paso, robles, wine, storage, vineyard, bottle, case, barrel, warehouse, climate, controlled"> 
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="next" href="https://pasowinestorage.com/#contact">
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body class="is-preload">
 
-		<!-- Nav -->
-			<nav id="nav">
-				<ul class="container">
-					<li><a href="#top">Home</a></li>
-					<!-- <li><a href="#work">About</a></li> -->
-					<li><a href="#services">Services</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
+	<!-- Nav -->
+	<nav id="nav">
+		<ul class="container">
+			<li><a href="#top">Home</a></li>
+			<!-- <li><a href="#work">About</a></li> -->
+			<li><a href="#services">Services</a></li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</nav>
 
-		<!-- Home -->
-			<article id="top" class="wrapper style1">
-				<div class="container">
-					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/logo1.png" alt="" /></span>
-						</div>
-						<div class="col-8 col-7-large col-12-medium">
-							<header>
-								<h1>Simple & reliable wine storage</h1>
-							</header>
-							<p>Offering a climate controlled environment for all your wine storage needs.</p>
-							<a href="#contact" class="button large scrolly">Contact</a>
-						</div>
-					</div>
+	<!-- Home -->
+	<article id="top" class="wrapper style1">
+		<div class="container">
+
+
+			<center>
+				<img src="images/logo8.png" width=50%>
+			</center>
+
+			<header>
+				<h1>Simple & reliable wine storage</h1>
+			</header>
+			<p>Offering a climate controlled environment for all your wine storage needs.</p>
+			<a href="#contact" class="button large scrolly">Contact</a>
+
+
+			
+
+
+			<!-- <div class="row">
+				<div class="col-4 col-5-large col-12-medium">
+					<span class="image fit"><img src="images/logo8.png" alt="" /></span>
 				</div>
-			</article>
+				<div class="col-8 col-7-large col-12-medium">
+					<header>
+						<h1>Simple & reliable wine storage</h1>
+					</header>
+					<p>Offering a climate controlled environment for all your wine storage needs.</p>
+					<a href="#contact" class="button large scrolly">Contact</a>
+				</div>
+			</div> -->
+		</div>
+	</article>
 
-		<!-- Work -->
+	<!-- Work -->
 			<!-- <article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
@@ -81,7 +97,7 @@
 				</div>
 			</article> -->
 
-		<!-- Services -->
+			<!-- Services -->
 			<article id="services" class="wrapper style3">
 				<div class="container">
 					<header>
@@ -136,10 +152,15 @@
 						<p>Let us take care of your wine storage needs.</p>
 						<!-- <a href="#contact" class="button large scrolly">Contact</a> -->
 					</footer>
+
+					<center>
+						<img src="images/commerce.png" width=75%>
+					</center>
+
 				</div>
 			</article>
 
-		<!-- Contact -->
+			<!-- Contact -->
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
@@ -194,16 +215,22 @@
 							</ul>
 							<hr />
 						</div> -->
+
+
+						
+
+
+
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:winestoragepaso@gmail.com?cc=m.kudija@gmail.com&subject=Paso%20Wine%20Storage">Link text</a></li>
+							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:david@pasowinestorage.com&subject=Paso%20Wine%20Storage">David@PasoWineStorage.com</a></li>
 						</ul>
 					</footer>
 				</div>
 			</article>
 
-		<!-- Scripts -->
+			<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
@@ -211,5 +238,5 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-	</body>
-</html>
+		</body>
+		</html>
