--- a/index.html
+++ b/index.html
@@ -153,9 +153,11 @@
 						<!-- <a href="#contact" class="button large scrolly">Contact</a> -->
 					</footer>
 
-					<center>
-						<img src="images/commerce.png" width=75%>
-					</center>
+					<div class="shadow">
+						<center>
+						<img src="images/commerce.png" width=100%>
+						</center>
+					</div>
 
 				</div>
 			</article>
