--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				<div class="container medium">
 					<header>
 						<h2>Contact</h2>
-						<p>Get in touch to learn more about our services and pricing.</p>
+						<p>Get in touch to learn more about our services and pricing using the form below, or give us a call at <a href="tel:+18053691191">805-369-1191</a>.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -226,7 +226,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:david@pasowinestorage.com&subject=Paso%20Wine%20Storage">David@PasoWineStorage.com</a></li>
+							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:david@pasowinestorage.com&subject=Paso%20Wine%20Storage">David@PasoWineStorage.com</a></li><li><a href="tel:+18053691191">805-369-1191</a></li>
 						</ul>
 					</footer>
 				</div>
