add google analytics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 -->
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-V9V60FRMHM"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-V9V60FRMHM');
+	</script>
 	<title>Paso Wine Storage</title>
 	<meta name="description" content="Offering a climate controlled environment for all your wine storage needs.">
 	<meta name="keywords" content="paso, robles, wine, storage, vineyard, bottle, case, barrel, warehouse, climate, controlled"> 
