update images, services

--- a/index.html
+++ b/index.html
@@ -186,15 +186,15 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/vineyard1.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/case1.jpg" alt="" /></a>
 								<h3>Case goods storage</h3>
 								<!-- <p>(do you want to add text here...?)</p> -->
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/tree2.jpg" alt="" /></a>
-								<h3>Bulk wine storage</h3>
+								<a href="#" class="image featured"><img src="images/barrel1.jpg" alt="" /></a>
+								<h3>Barrel storage</h3>
 								<!-- <p>Ornare nulla proin odio consequat.</p> -->
 							</article>
 						</div>
@@ -203,6 +203,13 @@
 								<a href="#" class="image featured"><img src="images/barn-door1.jpg" alt="" /></a>
 								<h3>Bonded wine storage</h3>
 								<!-- <p>Ornare nulla proin odio consequat.</p> -->
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/barn-door3.jpg" alt="" /></a>
+								<h3>Club Shipping & Fulfillment</h3>
+								<!-- <p><i>Coming soon!</i></p> -->
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -216,13 +223,6 @@
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/vineyard4.jpg" alt="" /></a>
 								<h3>Bottling</h3>
-								<p><i>Coming soon!</i></p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/barn-door3.jpg" alt="" /></a>
-								<h3>Club Shipping</h3>
 								<p><i>Coming soon!</i></p>
 							</article>
 						</div>
@@ -246,7 +246,7 @@
 				<div class="container medium">
 					<header>
 						<h2>Contact</h2>
-						<p>Get in touch to learn more about our services and pricing using the form below, or give us a call at <a href="tel:+18053691191">805-369-1191</a>.</p>
+						<p>Get in touch to learn more about our services and pricing. Send us an email at <a href="mailto:david@pasowinestorage.com&subject=Paso%20Wine%20Storage">David@PasoWineStorage.com</a>, give us a call at <a href="tel:+18053691191">805-369-1191</a>, or send a note with the form below.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
