--- a/index.html
+++ b/index.html
@@ -246,17 +246,20 @@
 				<div class="container medium">
 					<header>
 						<h2>Contact</h2>
-						<p>Get in touch to learn more about our services and pricing. Send us an email at <a href="mailto:david@pasowinestorage.com&subject=Paso%20Wine%20Storage">David@PasoWineStorage.com</a>, give us a call at <a href="tel:+18053691191">805-369-1191</a>, or send a note with the form below.</p>
+						<p>Get in touch to learn more about our services and pricing. Send us an email at <a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a>, give us a call at <a href="tel:+18053691191">805-369-1191</a>, or send a note with the form below.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
 							<form method="post" action="https://formspree.io/f/mgedqydj">
 								<div class="row">
-									<!-- <div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div> -->
 									<div class="col-12">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="col-6 col-12-small">
 										<input type="text" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="col-6 col-12-small">
+										<input type="text" name="phone" id="phone" placeholder="Phone" />
 									</div>
 									<!-- <div class="col-12">
 										<input type="text" name="subject" id="subject" placeholder="Subject" />
@@ -305,7 +308,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:david@pasowinestorage.com&subject=Paso%20Wine%20Storage">David@PasoWineStorage.com</a></li><li><a href="tel:+18053691191">805-369-1191</a></li>
+							<li>&copy; <script>new Date().getFullYear()>2005&&document.write(+new Date().getFullYear());</script> Minatronic Inc.</li><li><a href="mailto:info@pasowinestorage.com&subject=Paso%20Wine%20Storage">info@PasoWineStorage.com</a></li><li><a href="tel:+18053691191">805-369-1191</a></li>
 						</ul>
 					</footer>
 				</div>
