--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<nav id="nav">
 		<ul class="container">
 			<li><a href="#top">Home</a></li>
-			<!-- <li><a href="#work">About</a></li> -->
+			<li><a href="our-story.html#top">Our Story</a></li>
 			<li><a href="#services">Services</a></li>
 			<li><a href="#contact">Contact</a></li>
 		</ul>
