--- a/our-story.html
+++ b/our-story.html
@@ -68,21 +68,24 @@
 				<h2>The Paso Wine Storage Story</h2>
 				<!-- <p>Everything to serve your wine storage needs.</p> -->
 			</header>
-			<img class="left" src="images/commerce.png">
+			<!-- <img class="left" src="images/commerce.png"> -->
 
-			<p align="justify">The September after their June wedding, Karen started optometry school while David continued running his manufacturing business. They knew that upon Karen's graduation she could practice Optometry in any city that she wanted, and David knew that as long as he had UPS delivery and a phone line he could operate his manufacturing business wherever he wanted. They took advantage of this exceptional opportunity and, as part of their honeymoon, drove across California to decide where they wanted to settle down. They drove from the Mexican border to Hearst Castle, and from the coast to the Central Valley. That quest led them to San Luis Obispo County and, finally, to Paso Robles.</p>
+			<p align="justify">Like many small businesses, Paso Wine Storage has its origin in family. The founder and owner, David Kudija, first met his wife, Karen, when they were both living in Southern California. David was running the manufacturing business he had taken over from his father, and Karen was preparing to enter optometry school. They knew that upon graduation Karen could practice optometry in any city she wanted, and that–as long as he had UPS delivery and a phone line–David could operate his manufacturing business from wherever he wanted. This exceptional opportunity allowed them to focus on what was most important: where to raise their future family. So, following their June wedding in 1986, Karen and David took a road trip across California, from the Mexican border, to Hearst Castle, to the Central Valley, looking for a place to put down roots. This quest eventually led them to the beautiful rolling hills and vineyards of Paso Robles, where they decided to settle down.</p>
 
-			<p align="justify">Karen had four years of school ahead of her and David used the time to prepare the manufacturing company to move. Part of that preparation was buying a piece of property on which they hoped to eventually build a manufacturing facility. Finally, in July of 1990 the big move commenced and 33 trucks later their home and business were in Paso Robles. They ended up not building a facility on that land but rather moved the manufacturing plant into a rented space on the south end of town and Karen went to work for an optometry office on Vine Street.</p>
+			<p align="justify">And so, in 1990 the big move up to Paso Robles began. Karen started her optometry practice with an office on Vine Street, and David set up his manufacturing business in town, part of which involved buying a warehouse on Commerce Way, with the thought of eventually expanding the manufacturing business there. 3 children and 32 years later, after his decades working in manufacturing and seeing all his kids through college, David’s enterprising spirit was looking for something new. So, he turned his attention to the warehouse he had bought when first moving to the area. Though never part of his manufacturing business, the building had served many community businesses over the years, housing operations such as Paris Precision for sheet metal manufacturing, Paso Wine Services for custom crush, Weatherby for rifle manufacturing, and Daniel’s Woodland for personal protection equipment production during Cofid. Thinking to honor the rich history of wine production in the area and provide a service to local wineries, David converted the building into wine storage, thus establishing Paso Wine Storage.</p>
 
-			<p align="justify">This brings us to the current home of Paso Wine Storage: in 2006 Lowe's wanted to move to town and bought a piece of the property where they had hoped to build a factory, and they used the proceeds from the sale to purchase the building that now houses Paso Wine Storage. The original occupant was a sheet metal manufacturer, Paris Precision, who operated for years from this facility before moving. Then along came Paso Wine Services who converted it to a custom crush facility in which they housed multiple wineries. This was an expansion from their home base in Santa Maria that they occupied until they outgrew it and moved to the airport.</p>
-
-			<p align="justify">Next came Weatherby Firearms for a number of years to manufacture their long guns. Weatherby leased the building until the governor of Wyoming lured them to his state. Daniel's Woodland Company used the facility to manufacture personal protection gowns to keep First Responders safe during Covid. As the need for that dwindled, David decided that although he was at an age considered to be past that of normal retirement he needed something to do. Since there was a large demand for wine storage space and the building, thanks to Paso Wine Services, had everything needed to store wine for local wineries, David decided to start a wine storage business. On April 7th of 2022 Paso Wine Storage received its license to store wine in its air conditioned 35,000 sq ft warehouse.</p>
-
-			<p align="justify">As the storage business grew we branched out to fulfillment of daily orders and club shipments for wineries. It has been an exciting time of ups and downs along the way but generally the trend has remained upwards. The community has been so supportive of the effort that Paso Wine Storage recently leased the building next door to add an additional 40,000 square feet of wine storage.</p>
-
+			<p align="justify">On April 7, 2022 Paso Wine Storage received its license to store wine in its air conditioned 35,000 square foot warehouse. As the storage business grew Paso Wine Storage branched out to include fulfillment of daily orders and club shipments for wineries. The community has been so supportive of the effort that Paso Wine Storage recently leased the building next door to add an additional 40,000 square feet of wine storage.</p>
+			
 			<img class="right" src="images/commerce.png">
 
-			<p align="justify">We are a 3-generation family business in the making: David runs the show, the kids help with marketing and finance, and the grandkids have started pulling weeds and taking forklift operator lessons. Thank you for your support and we are ready to offer you our personal service!</p>
+			<p align="justify">As it has been from its conception, Paso Wine Storage is a family affair. It is a 3-generation family business in the making: David runs the show, his kids help with marketing and finance, and the grandkids have started pulling weeds and taking forklift operator lessons. Thank you for your support and we are ready to offer you our personal service!</p>
+
+			<a href="index.html#services" class="button large scrolly">Our Services</a>
+			<a href="index.html" class="button large alt">Home</a>
+
+
+
+
 
 		</div>
 	</article> 
