--- a/index.html
+++ b/index.html
@@ -139,42 +139,7 @@
 		</div>
 	</article>
 
-	<!-- Work -->
-			<!-- <article id="work" class="wrapper style2">
-				<div class="container">
-					<header>
-						<h2>Here's all the services we offer.</h2>
-						<p>Everything to serve your wine storage needs.</p>
-					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
-				</div>
-			</article> -->
+	
 
 			<!-- Services -->
 			<article id="services" class="wrapper style3">
@@ -238,6 +203,44 @@
 						</center>
 					</div>
 
+				</div>
+			</article>
+
+			<!-- Testimonials -->
+			<article id="work" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Here's what our customers have to say.</h2>
+						<p>As a small, family-owned business, we pride ourselves on providing exceptional customer service. </p>
+					</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-comments"></span>
+								<a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a>
+								<p>I’m grateful to have entered this relationship with Paso Wine Storage. The functionality and customer service has been exceptional. Hannah and David are a joy to work with. Jim and I are super happy with our decision. Any job or inquiry I throw at Hannah is handled quickly and with a level of care that is truly notable and appreciated.<br><strong>–Adrienne Ferrara</strong><br><i style="color:darkgray;">Cal Poly Wine and Viticulture Department</i></p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-comments"></span>
+								<!-- <a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a> -->
+								<p>Testimonial...<br><strong>–Person</strong><br><i style="color:darkgray;">Company</i></p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-comments"></span>
+								<!-- <a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a> -->
+								<p>Testimonial...<br><strong>–Person</strong><br><i style="color:darkgray;">Company</i></p>
+							</section>
+						</div>
+						
+					</div>
+					<footer>
+						<!-- <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p> -->
+						<a href="our-story.html#top" class="button large scrolly">Our Story</a>
+					</footer>
 				</div>
 			</article>
 
