--- a/index.html
+++ b/index.html
@@ -222,19 +222,21 @@
 					</section>
 				</div>
 
-				<!-- <div class="col-4 col-6-medium col-12-small">
+				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a>
-						<p>Testimonial...<br><strong>–Person</strong><br><i style="color:darkgray;">Company</i></p>
+						<a href="https://www.ninerwine.com/" target="_blank" class="image featured"><img src="images/niner.png" alt="" /></a>
+						<!-- <span class="icon featured fa-comments"></span> -->
+						<p>We are so thankful for our partnership with Paso Wine Storage! Hannah and her team consistently provide white-glove customer service, along with professional and timely communication. They bring us solutions instead of problems and take care of any shipping issues that arise, giving us more time to focus on our customers. They are a joy to work with and the level of care they take in their work is truly appreciated!<br><strong>–Alicia Wooten</strong><br><i style="color:darkgray;">Niner Wine Estates</i></p>
 					</section>
 				</div>
 
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a>
-						<p>Testimonial...<br><strong>–Person</strong><br><i style="color:darkgray;">Company</i></p>
+						<a href="https://optiovineyards.com/" target="_blank" class="image featured"><img src="images/optio.png" alt="" /></a>
+						<!-- <span class="icon featured fa-comments"></span> -->
+						<p>I have to say the service, quality of packaging, timeliness, and responsiveness from Paso Robles Wine storage is absolutely fantastic. They are 100% customer first company. Hannah & David are amazing people to work with. You won't be nickeled and dimed for all the little shipping charges and extra things that you don't know are happening. Go ahead, make the switch, you'll be happy you did.<br><strong>–Melanie Greer </strong><br><i style="color:darkgray;">Optio Vineyards</i></p>
 					</section>
-				</div> -->
+				</div>
 
 			</div>
 			<footer>
@@ -327,7 +329,7 @@
                            			<!--<h2>Subscribe</h2>-->
                            			<!--<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>-->
                            			<div class="mc-field-group">
-                           				<label for="mce-EMAIL" style="color: white">Email Address  <span class="asterisk">*</span>
+                           				<label for="mce-EMAIL" style="color: white">Email Address
                            				</label>
                            				<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
                            				<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
