--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		gtag('config', 'G-V9V60FRMHM');
 	</script>
 	<title>Paso Wine Storage</title>
-	<meta name="description" content="Offering a climate controlled environment for all your wine storage needs.">
+	<meta name="description" content="Offering a climate controlled environment for all your wine storage and fulfillment needs. As a small, family-owned business, we pride ourselves on providing exceptional customer service.">
 	<meta name="keywords" content="paso, robles, wine, storage, vineyard, bottle, case, barrel, warehouse, climate, controlled"> 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
