--- a/brand.html
+++ b/brand.html
@@ -75,7 +75,7 @@
 
 
 			<h2 class="major"><span>Typeface</span></h2>
-			<p>Serif Typeface: <span style="font-family: 'Sanchez'; text-decoration: underline">Sanchez</span></p>
+			<p>Serif Typeface: <span style="font-family: 'Sanchez', serif; text-decoration: underline">Sanchez</span></p>
 			<ul>
 				<li>The serif typeface is the primary typeface to be used on all assets including web, print, signage, etc.</li>
 				<li>Link: <a href="https://fonts.google.com/specimen/Sanchez" target="_blank">https://fonts.google.com/specimen/Sanchez</li></a></li>
