update tagline, reorder services

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 		</center>
 
 		<header>
-			<h1>Simple & reliable wine storage</h1>
+			<h1>Wine storage & fulfillment with a personal touch</h1>
 		</header>
-		<p>Offering a climate controlled environment for all your wine storage needs.</p>
+		<p>Offering the best customer service for all your wine storage & fulfillment needs.</p>
 		<a href="#contact" class="button large scrolly">Contact</a>
 
 
@@ -146,16 +146,9 @@
 		<div class="container">
 			<header>
 				<h2>Our services</h2>
-				<p>We offer a number of services and are adding more soon.</p>
+				<!-- <p>We offer a number of services and are adding more soon.</p> -->
 			</header>
 			<div class="row">
-				<div class="col-4 col-6-medium col-12-small">
-					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/24.png" alt="" /></a>
-						<!-- <h3>Case goods storage</h3> -->
-						<!-- <p>(do you want to add text here...?)</p> -->
-					</article>
-				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/25.png" alt="" /></a>
@@ -175,6 +168,13 @@
 						<a href="#" class="image featured"><img src="images/27.png" alt="" /></a>
 						<!-- <h3>Club Shipping & Fulfillment</h3> -->
 						<!-- <p><i>Coming soon!</i></p> -->
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="#" class="image featured"><img src="images/24.png" alt="" /></a>
+						<!-- <h3>Case goods storage</h3> -->
+						<!-- <p>(do you want to add text here...?)</p> -->
 					</article>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
@@ -216,17 +216,17 @@
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a>
+						<a href="https://www.ninerwine.com/" target="_blank" class="image featured"><img src="images/niner.png" alt="" /></a>
 						<!-- <span class="icon featured fa-comments"></span> -->
-						<p>I’m grateful to have entered this relationship with Paso Wine Storage. The functionality and customer service has been exceptional. Hannah and David are a joy to work with. Jim and I are super happy with our decision. Any job or inquiry I throw at Hannah is handled quickly and with a level of care that is truly notable and appreciated.<br><strong>–Adrienne Ferrara</strong><br><i style="color:darkgray;">Cal Poly Wine and Viticulture Department</i></p>
+						<p>We are so thankful for our partnership with Paso Wine Storage! Hannah and her team consistently provide white-glove customer service, along with professional and timely communication. They bring us solutions instead of problems and take care of any shipping issues that arise, giving us more time to focus on our customers. They are a joy to work with and the level of care they take in their work is truly appreciated!<br><strong>–Alicia Wooten</strong><br><i style="color:darkgray;">Niner Wine Estates</i></p>
 					</section>
 				</div>
 
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<a href="https://www.ninerwine.com/" target="_blank" class="image featured"><img src="images/niner.png" alt="" /></a>
+						<a href="https://wvit.calpoly.edu/" target="_blank" class="image featured"><img src="images/calpoly.png" alt="" /></a>
 						<!-- <span class="icon featured fa-comments"></span> -->
-						<p>We are so thankful for our partnership with Paso Wine Storage! Hannah and her team consistently provide white-glove customer service, along with professional and timely communication. They bring us solutions instead of problems and take care of any shipping issues that arise, giving us more time to focus on our customers. They are a joy to work with and the level of care they take in their work is truly appreciated!<br><strong>–Alicia Wooten</strong><br><i style="color:darkgray;">Niner Wine Estates</i></p>
+						<p>I’m grateful to have entered this relationship with Paso Wine Storage. The functionality and customer service has been exceptional. Hannah and David are a joy to work with. Jim and I are super happy with our decision. Any job or inquiry I throw at Hannah is handled quickly and with a level of care that is truly notable and appreciated.<br><strong>–Adrienne Ferrara</strong><br><i style="color:darkgray;">Cal Poly Wine and Viticulture Department</i></p>
 					</section>
 				</div>
 
