brick barn testimonial

--- a/index.html
+++ b/index.html
@@ -238,6 +238,14 @@
 					</section>
 				</div>
 
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<a href="https://www.brickbarnwineestate.com/" target="_blank" class="image featured"><img src="images/brick_barn.png" alt="brick barn testimonial" aria-label="testimonial" /></a>
+						<!-- <span class="icon featured fa-comments"></span> -->
+						<p>We used to manage our wine club shipments in-house, but the time, resources, and headaches were overwhelming. Switching to Paso Wine Storage (PWS) was one of the best decisions we've made. The entire transition process was incredibly smooth, unlike our previous experience with another shipping company that demanded excessive documentation and complex procedures.<br>Working with PWS has been a dream! We no longer have to worry about shipping logistics. Hannah is an absolute delight—extremely helpful, responsive, and efficient. Address changes, redirects, and returns are handled seamlessly, and their team even manages customer interactions with ease. Our website and tasting room orders flow directly to PWS, and we can rest easy knowing that our dailies are taken care of without any extra effort on our part. We're thrilled to have found PWS! <br><strong>–Elizabeth Dadosky </strong><br><i style="color:darkgray;">Brick Barn Wine Estate</i></p>
+					</section>
+				</div>
+
 			</div>
 			<footer>
 				<!-- <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p> -->
