--- a/index_team.html
+++ b/index_team.html
@@ -255,7 +255,7 @@
 	</article>
 
 	<!-- Team -->
-	<article id="services" class="wrapper style3">
+	<article id="team" class="wrapper style3">
 		<div class="container">
 			<header>
 				<h2>Our Team</h2>
